[package]
name = "ghlast"
version = "0.1.0"
edition = "2021"
authors = ["Jeremy Nicklas <jeremywnicklas@gmail.com>"]
description = "Inspects the last release published to a GitHub repository"
license = "MIT"
keywords = ["github", "release", "version"]
homepage = "https://github.com/nickjer/ghlast"
repository = "https://github.com/nickjer/ghlast"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "3.1", features = ["derive"] }
minreq = { version = "2.0", features = ["https-rustls", "json-using-serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

[profile.release]
lto = true
codegen-units = 1
